App file changes