@@ -2,6 +2,7 @@ package com.mycompany.app;
 
 import java.util.ArrayList;
 import java.util.Arrays;
+import java.util.List;
 
 import junit.framework.Test;
 import junit.framework.TestCase;
@@ -38,43 +39,39 @@ public class AppTest
     {
         assertTrue( true );
     }
-    public void testTrueConcatination() {
-      String[] s = {"ab", "cd", "ef", "gh", "ij"};
-      ArrayList<Integer> array = new ArrayList<>(Arrays.asList(1, 2, 3, 4));
-      Integer[] arr = {0,1,3,4};
-      int a = 1;
-      assertEquals(new App().meaningfulOperation(array,arr,a,s),"cdefghijabcdghijcd");
+    public void testMeaningfulOperation_AllInputsInRange() {
+      String[] s = {"a", "b", "c", "d", "e"};
+      ArrayList<Integer> array = new ArrayList<>(Arrays.asList(0,2,4));
+      Integer[] arr = {1,3};
+      int a = 2;
+      assertEquals(new App().meaningfulOperation(array,arr,a,s),"acebdc");
     }
 
-    public void testOutOfBoundsInt() {
-      String[] s = {"ab", "cd", "ef", "gh", "ij"};
-      ArrayList<Integer> array = new ArrayList<>(Arrays.asList(1, 2, 3, 4));
-      Integer[] arr = {0,1,3,4};
-      int a = 99;
-      assertEquals(new App().meaningfulOperation(array,arr,a,s),"cdefghijabcdghij");
+    public void testMeaningfulOperation_NullArrayInputs() {
+        ArrayList<Integer> array = new ArrayList<>();
+        Integer[] arr = {};
+        int a = 0;
+        String[] s = {"a", "b", "c", "d", "e"};
+        assertEquals("a", new App().meaningfulOperation(array,arr,a,s));
     }
 
-    public void testNullArray() {
-      String[] s = {"ab", "cd", "ef", "gh", "ij"};
-      ArrayList<Integer> array = new ArrayList<>(Arrays.asList(1, 2, 3, 4));
-      Integer[] arr = null;
-      int a = 1;
-      assertEquals(new App().meaningfulOperation(array,arr,a,s),"cdefghijcd");
+   
+    public void testMeaningfulOperation_EmptyInputArrays() {
+        ArrayList<Integer> array = null;
+        Integer[] arrInt = null;
+        int i = 0;
+        String[] strArr = {"a", "b", "c", "d", "e"};
+        assertEquals("a", App.meaningfulOperation(array, arrInt, i, strArr));
     }
 
-    public void testEmptyArrayList() {
-      String[] s = {"ab", "cd", "ef", "gh", "ij"};
-      ArrayList<Integer> array = new ArrayList<>();
-      Integer[] arr = {0,1,3,4};
-      int a = 1;
-      assertEquals(new App().meaningfulOperation(array,arr,a,s),"abcdghijcd");
-    }
-    public void testEmptyStringSet() {
-      String[] s = {""};
-      ArrayList<Integer> array = new ArrayList<>(Arrays.asList(1, 2, 3, 4));
-      Integer[] arr = {0,1,3,4};
-      int a = 1;
-      assertEquals(new App().meaningfulOperation(array,arr,a,s),"");
+
+    
+    public void testMeaningfulOperation_IndexEqualsStringLength() {
+        ArrayList<Integer> array = new ArrayList<>(List.of(0, 2, 4));
+        Integer[] arrInt = {1, 3};
+        int i = 5; // 5 is out of range, should not be concatenated
+        String[] strArr = {"a", "b", "c", "d", "e"};
+        assertEquals("acebd", App.meaningfulOperation(array, arrInt, i, strArr));
     }
 
 }
